fix: shasum css for dark mode

--- a/styles/global.css
+++ b/styles/global.css
@@ -44,6 +44,9 @@ span.shasum {
   border-radius: 4px;
   padding: 0.5rem;
 }
+:is(html[class~="dark"]) span.shasum {
+  background-color: var(--op-neutral-700) !important;
+}
 span.shasum code {
   border: none;
   background-color: transparent !important;
